@@ -15,6 +15,17 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 91 - 07/09/2006 <==
+
++ <marmir> Added three headers and 1 cpp: 
+			modifier.h (abstract classes: Modifier, MatrixModifier and VectorModifier), 
+			libmatrixmodifiers.h/cpp (with three matrixmodifiers), and 
+			learningalgorithm.h (abstract learning algorithm)
++ <marmir> Added functions compare, sum, and not for VectorData in vectordata.h
++ <marmir> Added implementation of >> operator for RealMat in ionnfw.cpp
++ <marmir> Added matrix() function to MatrixLinker
+C <marmir> Generalized BinaryUpdater in StepUpdater (min e max are now settable)
+
     ==> 90 - 04/09/2006 <==
 
 C <mave> prettified printing of boolean values of Variant
